<resources>
    <string name="app_name">Workout Timer</string>
    <string name="workout_timer">Workout Timer</string>
    <string name="my_app_icon">My App Icon</string>
    <string name="workout_time">Workout Time</string>
    <string name="rest_time">Rest Time</string>
    <string name="workout_duration_hint">Enter Workout Duration</string>
    <string name="rest_duration_hint">Enter Rest Duration</string>
    <string name="start_button">Start</string>
    <string name="workout_label">Workout Duration (in seconds)</string>
    <string name="rest_label">Rest Duration (in seconds)</string>
    <string name="start_button_label">Start</string>
    <string name="stop_button_label">Stop</string>
    <string name="timer_label">Timer</string>
    <string name="workout_duration_label">Workout Duration Time</string>
    <string name="rest_duration_label">Rest Duration Time</string>
    <string name="timer_view_format">%02d:%02d</string>
    <string name="workout_duration_seconds">Workout Duration (seconds)</string>
    <string name="enter_time_seconds">Enter time (seconds)</string>
    <string name="rest_duration_seconds">Rest Duration (seconds)</string>
    <string name="timer">Timer</string>
    <string name="enter_number_of_sets">Enter number of sets</string>
    <string name="number_of_sets">Number of Sets</string>
</resources>